# LameView

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Info.plist.in  Makefile.am  NEWS  README  acinclude.m4  autogen.sh  configure.ac  configure.in  lameview.spec.in  make_Bundle.sh.in  make_bundle.sh.in
icons/: Makefile.am  lameview-16x16.xpm  lameview-32x32.xpm  lameview-48x48.xpm
lameview/: .gitignore  Makefile.am  cmdswitch.cpp  cmdswitch.h  lameview.cpp  lameview.h  layer2.cpp  layer3.cpp  profile.cpp  profile.h  profileline.cpp  profileline.h  profilesection.cpp  profilesection.h  settingbox.cpp  settingbox.h
xdg/: Makefile.am  lameview_lameview.desktop
